# Flowly

./: .env.example  .env.server.example  .gitignore  .npmrc  CLAUDE.md  DEPLOY.md  PHASE-0-NEXT-STEPS.md  README.md  RUN.md  SERVER-TEST.md  docker-compose.yml  frontendClaude.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml
apps/api/: .dockerignore  Dockerfile  pyproject.toml
apps/api/app/: config.py  main.py
apps/api/app/core/: exceptions.py  ratelimit.py  security.py  statsfilters.py  timerange.py  urls.py
apps/api/app/db/: ch_migrations.py  clickhouse.py  postgres.py  redis.py
apps/api/app/migrations/: env.py
apps/api/app/models/: base.py  events.py  schemas.py  tables.py
apps/api/app/routers/: account.py  assistant.py  auth.py  billing.py  collect.py  contact.py  email.py  goals.py  live.py  (+6 more)
apps/api/tests/: conftest.py  test_account.py  test_assistant.py  test_auth.py  test_batch_writer.py  test_billing_router.py  test_billing_service.py  test_billing_trial.py  test_ch_migrations.py  test_channels.py  test_collect.py  test_config.py  test_contact.py  test_digest.py  test_export.py  test_geo.py  test_goals.py  test_health.py  test_ingest.py  test_live.py  test_live_ws.py  test_migration.py  test_notifications.py  test_oauth.py  test_onboarding.py  test_password_reset.py  test_paywall.py  test_public_router.py  test_ratelimit.py  test_retention.py  test_searchconsole.py  test_security.py  test_sharing.py  test_sites.py  test_sites_service.py  test_stats_builders.py  test_stats_router.py  test_stats_service.py  test_uptime.py  test_urls.py  (+1 more)
(+205 files in other folders)
