[project]
name = "flowly-api"
version = "0.1.0"
description = "Flowly backend API (FastAPI)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pyjwt>=2.8",
    "argon2-cffi>=23.1",
    "redis>=5.0",
    "clickhouse-connect[async]>=0.7",
    "pydantic[email]>=2.7",
    "httpx>=0.28.1",
    "geoip2>=5.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.6",
    "pytest-asyncio>=0.23",
    "aiosqlite>=0.20",
    "fakeredis>=2.20",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
